# aila

./: .dockerignore  .env.example  .gitattributes  .gitignore  .railwayignore  AGENTS.md  CLAUDE.md  Dockerfile  MIGRATION_PYRIGHT.md  Procfile  README.md  codex_proposal.md  codex_proposal_functional.md  docker-compose.yml  init.sh  package.json  pyproject.toml  railway.toml
.claude/: settings.local.json
.devcontainer/: init-firewall.sh
.github/workflows/: compile_documentation.yaml  deploy.yml
aila/: annotate_pdfs.py  client_pool.py  client_pool_functional.py  config.py  legal_analyzer.py  llm_interface.py  llm_interface_compromise.py  llm_interface_tomasz.py  llm_models.py  load_document.py
aila/api/: README.md  main.py
aila/api/examples_api_calls/: test_analyze_texts.json
documentation/: approach_and_limitations.md  how_to_setup_claude_in_devcontainer.md
frontend/: aila.html  config.js  generate_config.py  main.py
frontend/static/: config.js  index.html  scripts.js  styles.css
prompt_templates/: prompt_0.txt  prompt_1.txt  prompt_2.txt
scripts/: devcontainer-post-create.sh  devcontainer-smoke.sh  llm_test.py  test.py
tests/: test_llm_interface_functional.py  test_llm_interface_oop.py
